# 3D-Rotary-Display

./: CMakeLists.txt  MatLab Prac1 Log V1.odt  README.md  main.h
3d-rotary-display/main/: CMakeLists.txt  ota_example.c
main/: CMakeLists.txt  main.c  main.h  ota_example.c
main/task/: http_task.c  ota_task.c  task.h  wifi_task.c
web/: index.html
